--- a/assets/stylus/main.styl
+++ b/assets/stylus/main.styl
@@ -553,10 +553,10 @@ h2.related-products
 	.item
 		width 100%
 		img
-			width 200px
+			width 280px
 			height auto
 			display flex
-			margin 30px auto 0 auto
+			margin 0 auto 0 auto
 @media screen and (min-width: 425px)
 	.categories-block
 		.category-item
@@ -1017,7 +1017,7 @@ h2.related-products
 	.banner-coleccion
 		.item
 			img
-				margin 45px auto 0 auto
+				margin 0 auto
 @media screen and (min-width: 1200px)
 	.inner-banner-top
 		height 550px
@@ -1106,7 +1106,8 @@ h2.related-products
 	.banner-coleccion
 		.item
 			img
-				width 300px
+				width 400px
+				margin-top 0px
 @media screen and (min-width: 1400px)
 	.address-container
 		background-size 550px
