Some little style changes

--- a/assets/stylus/main.styl
+++ b/assets/stylus/main.styl
@@ -4,6 +4,8 @@ cafe = #614e40
 
 #respond
 	display none
+.underline
+	text-decoration underline
 .bold
 	font-weight 700
 .cafe
@@ -194,6 +196,7 @@ p.intro
 		color white
 		font-size 3em
 		text-shadow 3px 3px 5px rgba(0,0,0,1)
+		text-align center
 	&.blog
 		background-image url(./assets/images/banner-blog.jpg)
 		text-align center
@@ -588,6 +591,8 @@ h2.related-products
 	.left-image
 		height 360px
 @media screen and (min-width: 768px)
+	.hidden-md
+		display none
 	.m-bottom--30
 		margin-bottom -30px !important
 	.m-bottom-330
@@ -1134,4 +1139,3 @@ h2.related-products
 	.address-container
 		background-size cover
 		background-position center -250px
-		
