Product pagination  done

--- a/assets/stylus/main.styl
+++ b/assets/stylus/main.styl
@@ -561,6 +561,12 @@ h2.related-products
 			height auto
 			display flex
 			margin 0 auto 0 auto
+#pagination
+	width 100%
+	display flex
+	justify-content space-evenly
+	a
+		color cafe
 @media screen and (min-width: 425px)
 	.categories-block
 		.category-item
